[project]
name = "relatservico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "charset-normalizer==3.4.2",
    "cors>=1.0.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.1.0",
    "pillow==11.3.0",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "reportlab==4.4.2",
    "shiboken6==6.9.1",
]
